[package]
name = "mussh-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["zeroize", "std", "arrayvec"] }
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive", "serde_derive"] }
tracing = "0.1.37"
